--- a/app/views/refinery/jobs/jobs/index.html.erb
+++ b/app/views/refinery/jobs/jobs/index.html.erb
@@ -1,8 +1,4 @@
-<% content_for :body_content_title do %>
-  <h1><%= t('.current_open_positions') %></h1>
-<% end %>
-
-<% content_for :body do %>
+<% content_for :side_body do %>
   <% if @jobs.any? %>
     <section>
       <ul id="jobs">
