--- a/app/views/refinery/jobs/jobs/index.html.erb
+++ b/app/views/refinery/jobs/jobs/index.html.erb
@@ -14,4 +14,4 @@
   <% end %>
 <% end %>
 
-<%= render :partial => "/refinery/pages/main_with_sidebar" %>
+<%= render :partial => "/refinery/content_page" %>
