--- a/app/views/refinery/jobs/job_applications/_form.html.erb
+++ b/app/views/refinery/jobs/job_applications/_form.html.erb
@@ -26,7 +26,7 @@
 
   <div class='form-group'>
     <%= f.required_label :resume %>
-    <%= f.file_field :resume, :class => 'form-control', :required => 'required' %>
+    <%= f.file_field :resume %>
   </div>
 
   <div class="actions">
