--- a/app/views/refinery/jobs/jobs/show.html.erb
+++ b/app/views/refinery/jobs/jobs/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="page-title"><%= raw(@job.title) %></div>
+	<div class="page-title-no-image"><%= raw(@job.title) %></div>
 	<div class="row">
 		<div class="col-md-8">
 			<h2><%= t('.description')%></h2>
